--- a/css/list.css
+++ b/css/list.css
@@ -284,7 +284,9 @@ hr {
         text-align: right;
     }
 
-
+    .eu-content p {
+        font-size: 0.9rem;
+    }
     .bottom h3 {
         font-size: 0.9rem;
     }
@@ -436,3 +438,4 @@ hr {
         width: 50%;
     }
 }
+
