--- a/css/index.css
+++ b/css/index.css
@@ -65,8 +65,6 @@ p {
     transform: scale(1);
 }
 
-
-
 .container {
     width: 100%;
     height: 100vh;
@@ -75,7 +73,7 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/paper.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
     background-color: transparent;
     background-size: cover;
     background-position: center;
@@ -151,3 +149,4 @@ p {
         font-size: 2rem;
     }
 }
+
